test/libsolidity/syntaxTests/using/operator_for_library.sol
using {f as +} for L;

function f() {}
library L {}

// ----
// TypeError 1130: (19-20): Invalid use of a library name.
